--- a/package.json
+++ b/package.json
@@ -6,9 +6,13 @@
     "@testing-library/jest-dom": "^5.16.1",
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
+    "npm-upgrade": "^3.0.0",
     "react": "^17.0.2",
+    "react-audio-player": "^0.17.0",
     "react-dom": "^17.0.2",
     "react-scripts": "5.0.0",
+    "react-sound": "^1.2.0",
+    "use-sound": "^4.0.1",
     "web-vitals": "^2.1.2"
   },
   "scripts": {
